--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
     background-color: lightcyan;
 }
+
+h1 {
+    color:crimson;
+    text-align: center;
+    font-family: fantasy;
+    font-size: 20px;
+}
+
+p {
+    color:hotpink;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 12px;
+}
