--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@ h1 {
     color:crimson;
     text-align: center;
     font-family: fantasy;
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
-p {
+p.desc {
     color:hotpink;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 12px;
+    font-size: 20px;
 }
