--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ h1 {
     color:crimson;
     text-align: center;
     font-family: fantasy;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
 }
 
 p.desc {
     color:hotpink;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 30px;
+    font-family: fantasy;
 }
