--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@ p.desc {
     font-size: 25px;
     font-family: fantasy;
 }
+
+.tab {
+    overflow: hidden;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.buttontab {
+    background-color: aqua;
+    border: 3px solid pink;
+}
+
+.picstab {
+    background-color: beige;
+    border: 3px solid pink;
+}
