--- a/style.css
+++ b/style.css
@@ -23,6 +23,20 @@ p.desc {
     background-color: white;
 }
 
+.tab button {
+    background-color: inherit;
+    float: left;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: blueviolet;
+}
+
+.tab button.active {
+    background-color: purple;
+}
+
 .buttontab {
     background-color: aqua;
     border: 3px solid pink;
