--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@ p.desc {
 .buttontab {
     background-color: aqua;
     border: 3px solid pink;
+    display: none;
 }
 
 .picstab {
     background-color: beige;
     border: 3px solid pink;
+    display: none;
 }
