--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p.desc {
 .buttontab {
     background-color: aqua;
     border: 3px solid pink;
-    display: none;
+    display: active;
 }
 
 .picstab {
