--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ p.desc {
     background-color: burlywood;
 }
 
-.tabclick {
+/* .tabclick {
     display: none;
-}
+} */
 
 .tablinks {
     display: none;
