--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p.desc {
 
 .tab {
     overflow: hidden;
-    border: 1px solid black;
+    border: 2px solid black;
     background-color: white;
 }
 
@@ -27,16 +27,20 @@ p.desc {
     background-color: inherit;
     float: left;
     transition: 0.3s;
-    padding: 10px 20px;
-    color:cadetblue;
+    padding: 20px 40px;
+    color:crimson;
+    font-family: fantasy;
+    font-size: 15px;
 }
 
 .tab button:hover {
     background-color: blueviolet;
+    color:white
 }
 
 .tab button.active {
     background-color: blueviolet;
+    color: white;
 }
 
 .buttontab {
