update before needing to go

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p.desc {
     float: left;
     transition: 0.3s;
     padding: 20px 40px;
-    color:crimson;
+    color:black;
     font-family: fantasy;
     font-size: 15px;
 }
