--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ p.desc {
 }
 
 h2 {
-    color: hotpink;
+    color: crimson;
     font-family: fantasy;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .tab {
