--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ h1 {
     font-weight: bold;
 }
 
+p {
+    font-family:fantasy;
+}
+
 p.desc {
     color:hotpink;
     font-family: 'Times New Roman', Times, serif;
