--- a/style.css
+++ b/style.css
@@ -78,3 +78,13 @@ h2 {
 /* .nav {
     margin: 0;
 } */
+
+ul {
+    list-style-type: square;
+    margin:0;
+    padding:0;
+}
+
+li {
+    font-family: fantasy;
+}
