--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: lightcyan;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -54,6 +56,11 @@ h2 {
     color: white;
 }
 
+img {
+    width: 400px;
+    height: auto;
+}
+
 /* .buttontab {
     background-color: ;
 }
@@ -83,8 +90,5 @@ ul {
     list-style-type: square;
     margin:0;
     padding:0;
-}
-
-li {
     font-family: fantasy;
 }
