--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ h2 {
 img {
     width: 600px;
     height: auto;
-    align-items: center;
+    margin: auto;
+    display: block;
 }
 
 /* .buttontab {
