--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ li {
 }
 
 .button {
-    background-color:darkslategray;
+    background-color:darkgray;
     color:white;
     text-align: center;
     font-size: 15px;
