slight edits to button style

--- a/style.css
+++ b/style.css
@@ -103,5 +103,6 @@ li {
     background-color:rgb(111, 245, 255);
     color:black;
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
+    font-family: fantasy;
 }
