--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ h2 {
 }
 
 img {
-    width: 600px;
-    height: auto;
+    width: auto;
+    height: 600px;
     margin: auto;
     display: block;
     padding-bottom: 2px;
